tests/opaque_subtype/opaque_subtype.exp
Error ------------------------------------------------------------------------------------------------- decltest.js:2:33

Cannot use `T` [1] in an input/output position because `T` [1] is expected to occur only in output positions.
[incompatible-variance]

   decltest.js:2:33
   2| declare opaque type Foo<+T>: {p:T}; // Error, invariant use of T
                                      ^

References:
   decltest.js:2:26
   2| declare opaque type Foo<+T>: {p:T}; // Error, invariant use of T
                               ^ [1]


Error ----------------------------------------------------------------------------------------------- importtest.js:5:12

Cannot return `y` because `SuperType` [1] is incompatible with `SuperOpaque` [2]. [incompatible-return]

   importtest.js:5:12
   5|     return y;
                 ^

References:
   importtest.js:4:20
   4| function test1 (y: SuperType) : SuperOpaque { // Error: number ~> SuperOpaque
                         ^^^^^^^^^ [1]
   importtest.js:4:33
   4| function test1 (y: SuperType) : SuperOpaque { // Error: number ~> SuperOpaque
                                      ^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- importtest.js:13:12

Cannot return `x` because number [1] is incompatible with `Counter` [2]. [incompatible-return]

   importtest.js:13:12
   13|     return x;
                  ^

References:
   importtest.js:12:20
   12| function test3 (x: number): Counter {// Error: number ~> Counter
                          ^^^^^^ [1]
   importtest.js:12:29
   12| function test3 (x: number): Counter {// Error: number ~> Counter
                                   ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- importtest.js:25:12

Cannot return `x` because `PolyGood` [1] is incompatible with `PolyBar` [2]. [incompatible-return]

   importtest.js:25:12
   25|     return x;
                  ^

References:
   importtest.js:24:19
   24| function test6(x: PolyGood<number>): PolyBar<number> { // Error: PolyFoo ~> PolyBar
                         ^^^^^^^^^^^^^^^^ [1]
   importtest.js:24:38
   24| function test6(x: PolyGood<number>): PolyBar<number> { // Error: PolyFoo ~> PolyBar
                                            ^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- importtest.js:29:12

Cannot return `x` because `PolyGood` [1] is incompatible with string [2] in type argument `T` [3]. [incompatible-return]

   importtest.js:29:12
   29|     return x;
                  ^

References:
   importtest.js:28:19
   28| function test7(x: PolyGood<number>): PolyFoo<string> { // Error: number ~> string
                         ^^^^^^^^^^^^^^^^ [1]
   importtest.js:28:46
   28| function test7(x: PolyGood<number>): PolyFoo<string> { // Error: number ~> string
                                                    ^^^^^^ [2]
   test.js:12:22
   12| export class PolyFoo<T> {}
                            ^ [3]


Error ---------------------------------------------------------------------------------------------- importtest.js:37:12

Cannot assign update to `x` because number [1] is incompatible with `SuperType` [2]. [incompatible-type]

   importtest.js:37:12
   37|     return x++; // Error number ~> SuperType
                  ^^^ [1]

References:
   importtest.js:36:19
   36| function test9(x: SuperType): SuperType { // Error number ~> SuperType
                         ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- importtest.js:37:12

Cannot return `x++` because number [1] is incompatible with `SuperType` [2]. [incompatible-return]

   importtest.js:37:12
   37|     return x++; // Error number ~> SuperType
                  ^^^ [1]

References:
   importtest.js:36:31
   36| function test9(x: SuperType): SuperType { // Error number ~> SuperType
                                     ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- importtest.js:50:12

Cannot return `x + y` because string [1] is incompatible with number [2]. [incompatible-return]

   importtest.js:50:12
   50|     return x + y;
                  ^^^^^ [1]

References:
   importtest.js:49:32
   49| function test12(x: ID, y: ID): number { // Error: string ~> number
                                      ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:5:48

number [1] is incompatible with `SuperType` [2]. [incompatible-type]

   test.js:5:48
   5| export opaque type SuperOpaqueBad: SuperType = Counter; // Error: number ~> SuperType
                                                     ^^^^^^^ [1]

References:
   test.js:5:36
   5| export opaque type SuperOpaqueBad: SuperType = Counter; // Error: number ~> SuperType
                                         ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:10:36

`Foo` [1] is incompatible with `Bar` [2]. [incompatible-type]

   test.js:10:36
   10| export opaque type ClassBad: Bar = Foo; // Error: Foo ~> Bar
                                          ^^^ [1]

References:
   test.js:10:30
   10| export opaque type ClassBad: Bar = Foo; // Error: Foo ~> Bar
                                    ^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:15:45

`PolyFoo` [1] is incompatible with `PolyBar` [2]. [incompatible-type]

   test.js:15:45
   15| export opaque type PolyBad<T>: PolyBar<T> = PolyFoo<T>; // Error: PolyFoo ~> PolyBar
                                                   ^^^^^^^^^^ [1]

References:
   test.js:15:32
   15| export opaque type PolyBad<T>: PolyBar<T> = PolyFoo<T>; // Error: PolyFoo ~> PolyBar
                                      ^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:17:27

Cannot use `PolyFoo` [1] with fewer than 1 type argument. [missing-type-arg]

   test.js:17:27
   17| class PolyBar2<T> extends PolyFoo {}
                                 ^^^^^^^

References:
   test.js:12:21
   12| export class PolyFoo<T> {}
                           ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:19:47

`PolyFoo` [1] is incompatible with `PolyBar2` [2]. [incompatible-type]

   test.js:19:47
   19| export opaque type PolyBad3<T>: PolyBar2<T> = PolyFoo<T>; // Error: PolyFoo ~> PolyBar2
                                                     ^^^^^^^^^^ [1]

References:
   test.js:19:33
   19| export opaque type PolyBad3<T>: PolyBar2<T> = PolyFoo<T>; // Error: PolyFoo ~> PolyBar2
                                       ^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:25:65

string [1] is incompatible with number [2] in type argument `T` [3]. [incompatible-type-arg]

   test.js:25:65
   25| export opaque type BadContra: Contra<number | string> = EContra<string>; // Error: string ~> number
                                                                       ^^^^^^ [1]

References:
   test.js:25:38
   25| export opaque type BadContra: Contra<number | string> = EContra<string>; // Error: string ~> number
                                            ^^^^^^ [2]
   test.js:21:15
   21| class Contra<-T> {}
                     ^ [3]


Error ---------------------------------------------------------------------------------------------- typeapp-test.js:5:8

Cannot assign `null` to `foo2.p` because property `p` is not writable. [cannot-write]

   5|   foo2.p = null; // Error, covariant property p
             ^



Found 15 errors
